[package]
name = "sqlx-convenience"
version = "0.1.0"
edition = "2018"
description = "Convenience macros for very common sqlx stuff"
repository = "https://github.com/johanhelsing/sqlx-convenience"
authors = ["Johan Klokkhammer Helsing <johanhelsing@gmail.com>"]
license = "MIT"

[dependencies]
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true